--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- Photo -->
     <div class="container px-5">
         <div id="avatar">
-            <img class="shadow" src="static/assets/img/photo.png">
+            <img class="shadow" src="static/assets/img/dusk.png">
         </div>
     </div>
     <!-- Photo -->
@@ -140,7 +140,7 @@
     <!-- Home -->
 
     <!-- Awards -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
+    <!-- <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
         <div class="container px-5">
             <header>
                 <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>AWARDS </h2>
@@ -148,22 +148,22 @@
             <div class="main-body" id="awards-md"></div>
 
         </div>
-    </section>
+    </section> -->
     <!-- Awards -->
 
     <!-- Experience -->
-    <section class="bg-gradient-primary-to-secondary-dark mt5 md5" id="experience">
+    <!-- <section class="bg-gradient-primary-to-secondary-dark mt5 md5" id="experience">
         <div class="container px-5">
             <header>
                 <h2 id="experience-subtitle"><i class="bi bi-briefcase-fill"></i> EXPERIENCE </h2>
             </header>
             <div class="main-body" id="experience-md"></div>
         </div>
-    </section>
+    </section> -->
     <!-- Experience -->
 
     <!-- Publications -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
+    <!-- <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
             <header>
                 <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
@@ -171,11 +171,11 @@
             <div class="main-body" id="publications-md"></div>
 
         </div>
-    </section>
+    </section> -->
     <!-- Publications  -->
 
     <!-- Footer-->
-    <footer class="bg-bottom text-center py-5">
+    <!-- <footer class="bg-bottom text-center py-5">
         <div class="container px-5">
             <div class="text-white-50 small">
                 <div id="copyright-text" class="mb-2"></div>
@@ -185,7 +185,7 @@
                     href="https://github.com/senli1073/senli1073.github.io/blob/main/LICENSE">License</a>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 </body>
 
