--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- Photo -->
     <div class="container px-5">
         <div id="avatar">
-            <img class="shadow" src="static/assets/img/dusk.png">
+            <img class="shadow" src="static/assets/img/Ex.jpg">
         </div>
     </div>
     <!-- Photo -->
