--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
     <!-- Awards -->
 
     <!-- Experience -->
-    <!-- <section class="bg-gradient-primary-to-secondary-dark mt5 md5" id="experience">
+    <section class="bg-gradient-primary-to-secondary-dark mt5 md5" id="experience">
         <div class="container px-5">
             <header>
-                <h2 id="experience-subtitle"><i class="bi bi-briefcase-fill"></i> EXPERIENCE </h2>
+                <h2 id="CV-subtitle"><i class="bi bi-briefcase-fill"></i> EXPERIENCE </h2>
             </header>
-            <div class="main-body" id="experience-md"></div>
+            <div class="main-body" id="CV-md"></div>
         </div>
-    </section> -->
+    </section>
     <!-- Experience -->
 
     <!-- Publications -->
