--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <!-- Awards -->
 
     <!-- Experience -->
-    <section class="bg-gradient-primary-to-secondary-dark mt5 md5" id="experience">
+    <section class="bg-gradient-primary-to-secondary-dark mt5 md5" id="CV">
         <div class="container px-5">
             <header>
                 <h2 id="CV-subtitle"><i class="bi bi-briefcase-fill"></i> EXPERIENCE </h2>
