--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#experience">EXPERIENCE</a>
+                        <a class="nav-link me-lg-3" href="#CV">CV</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
@@ -155,7 +155,7 @@
     <section class="bg-gradient-primary-to-secondary-dark mt5 md5" id="CV">
         <div class="container px-5">
             <header>
-                <h2 id="CV-subtitle"><i class="bi bi-briefcase-fill"></i> EXPERIENCE </h2>
+                <h2 id="CV-subtitle"><i class="bi bi-briefcase-fill"></i> CV </h2>
             </header>
             <div class="main-body" id="CV-md"></div>
         </div>
