--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#home">HOME</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#CV">CV</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
