--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#CV">CV</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#publications">Transcript</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -163,15 +163,15 @@
     <!-- Experience -->
 
     <!-- Publications -->
-    <!-- <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="Transcript">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
+                <h2 id="Transcript-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;Transcript</h2>
             </header>
-            <div class="main-body" id="publications-md"></div>
+            <div class="main-body" id="Transcript-md"></div>
 
         </div>
-    </section> -->
+    </section>
     <!-- Publications  -->
 
     <!-- Footer-->
