--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <a class="nav-link me-lg-3" href="#CV">CV</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#publications">Transcript</a>
+                        <a class="nav-link me-lg-3" href="#Transcript">Transcript</a>
                     </li>
                 </ul>
             </div>
