--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="static/js/bootstrap.bundle.min.js"></script>
 
     <!-- For Compatability -->
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script> -->
 
     <!-- Markdown -->
     <script type="text/javascript" src="static/js/marked.min.js"></script>
@@ -68,10 +68,10 @@
             }
         };
     </script>
-    <script type="text/javascript" id="MathJax-script"
+    <!-- <script type="text/javascript" id="MathJax-script"
         src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
     <script type="text/javascript" id="MathJax-script" async
-        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> -->
 
     <!-- Core JS-->
     <script type="text/javascript" src="static/js/scripts.js"></script>
